[Password Manager] Fix sending votes for password generation.

Changes on CL https://codereview.chromium.org/2637823002/ made that fields with empty name/id disappeared from uploads. This CL fixes it.

BUG=689999

Review-Url: https://codereview.chromium.org/2687683002
Cr-Commit-Position: refs/heads/master@{#449003}

Former-commit-id: 17c2759535e8a90b3bda092dcd4207ce554ee263